tests/ui/fail/unknown-param.stderr
error: unknown argument `blargh`
 --> tests/ui/fail/unknown-param.rs:3:13
  |
3 | #[generator(blargh = 3)]
  |             ^^^^^^
